Tried adding ext to browser Home Page, resolved Manual Workspaces bug

--- a/manifest.json
+++ b/manifest.json
@@ -24,5 +24,8 @@
     },
     "chrome_url_overrides": {
         "newtab": "new-tab.html"
+    },
+    "chrome_settings_overrides": {
+        "homepage": "/new-tab.html"
     }
 }
